[gd_scene load_steps=8 format=3 uid="uid://fjjmtmanx7pl"]

[ext_resource type="Texture2D" uid="uid://ccrt81lwnwsm5" path="res://car/images/top-car-view-png-34876.png" id="1_foc8d"]
[ext_resource type="Script" path="res://car/car.gd" id="1_twjbx"]
[ext_resource type="Script" path="res://car/speed_display.gd" id="3_vfyoy"]
[ext_resource type="Script" path="res://car/camera.gd" id="3_xr4hj"]
[ext_resource type="Texture2D" uid="uid://wnegdsxby5m" path="res://car/images/steering-wheel-14.png" id="4_kxcmu"]
[ext_resource type="Script" path="res://car/steering_wheel.gd" id="5_115s1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1befg"]
size = Vector2(195, 482)

[node name="Car" type="CharacterBody2D"]
script = ExtResource("1_twjbx")

[node name="Car" type="Sprite2D" parent="."]
texture = ExtResource("1_foc8d")
centered = false
offset = Vector2(-113.5, -450)

[node name="Camera2D" type="Camera2D" parent="Car"]
ignore_rotation = false
zoom = Vector2(0.125, 0.125)
script = ExtResource("3_xr4hj")

[node name="Display" type="Label" parent="Car/Camera2D"]
offset_left = -130.0
offset_top = -235.0
offset_right = -16.0
offset_bottom = -186.0
scale = Vector2(10, 10)
text = "
speed
"
horizontal_alignment = 1
script = ExtResource("3_vfyoy")

[node name="Steering-wheel-14" type="Sprite2D" parent="Car/Camera2D"]
position = Vector2(0, 350)
texture = ExtResource("4_kxcmu")
script = ExtResource("5_115s1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -202)
shape = SubResource("RectangleShape2D_1befg")

[connection signal="speed_data" from="." to="Car/Camera2D/Display" method="_on_car_speed_data"]
[connection signal="steering_pos" from="." to="Car/Camera2D/Steering-wheel-14" method="_on_car_steering_pos"]
